<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_programme"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_programme" />
        <item
            android:id="@+id/FAQFragment"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/FAQ" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/signOutFragment"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
